adminer.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: adminer
  namespace: mysql
spec:
  template:
    spec:
      containers:
        - image: adminer
          ports:
            - containerPort: 8080
