clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kourier-clusterip
  namespace: kourier-system
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: 3scale-kourier-gateway
  sessionAffinity: None
  type: ClusterIP
