hello2.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello2
  namespace: test
spec:
  template:
    spec:
      containers:
        - image: ghcr.io/knative/helloworld-go:latest
          ports:
            - containerPort: 8081
          env:
            - name: TARGET
              value: "there"
