alb_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: lb1
    alb.ingress.kubernetes.io/healthcheck-path: /ready
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
    #alb.ingress.kubernetes.io/ssl-redirect: "443"
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:0123456789:certificate/1234-5799-4554-6555
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/success-codes: '404'
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP1
  generation: 1
  labels:
  name: kourier
  namespace: kourier-system
spec:
  ingressClassName: alb
  rules:
  - host: hello.test2.api.multiplex.to
    http:
      paths:
      - backend:
          service:
            name: kourier-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
